Straightened out references to Flock citations
Flock 2020 is now Flock 2020a
Flock 2020b stays as is
Flock 2021a is now Flock 2021

I corrected the short forms throughout.

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -472,15 +472,13 @@ entries:
     full: "Fischer, Andrea, and Margarete Eska. 2011. “Joining Broken Wax Fragments: Testing Tensile Strength of Adhesives for Fragile and Non-Polar Substrates.” In *ICOM Committee for Conservation: 16th Triennial Meeting, Lisbon, Portugal, 19–23 September 2011: Preprints*, edited by Janet Bridgland and Catherine Antomarchi. Almada, Portugal: Critério; Paris: ICOM CC."
   - id: "Flock 2014"
     full: "Flock, Hannah. 2014. *Neue Untersuchungen zur Rissschließung in Leinwandbildträgern: Uni- und biaxiale Zugprüfungen an Prüfkörpern aus verklebtem Leinengarn und -gewebe sowie freien Klebstofffilmen. Kölner Beiträge zur Restaurierung und Konservierung von Kunst- und Kulturgut, Digitale Edition Band 2.* Cologne: CICS/FH Köln. <https://epb.bibl.th-koeln.de/frontdoor/deliver/index/docId/601/file/Flock_MA.pdf>."
-  - id: "Flock 2020"
-    full: "Flock, Hannah. 2020. “Einzelfadenverklebung in der Gemälderestaurierung: Klebstoffe, Prüfsystematik und Ergebnisse.” PhD diss., UdS Saarbrücken. https://doi.org/10.22028/D291-34685"
   - id: "Flock et al. 2019"
-    full: "Flock, Hannah, Stefan Diebels, Elisabeth Jägers, and Petra Demuth. 2019. “Störleim-Cellulosefaser-Gemische zur Einzelfadenverklebung.” *ZKK Zeitschrift für Kunsttechnologie und Konservierun*g, no. 1: 117–28."
-  - id: "Flock et al. 2020"
-    full: "Flock, Hannah, Stefan Diebels, Elisabeth Jägers, and Wulff Possart. 2020. “Thread-by-thread tear mendings in conservation of canvas paintings: A problem of reproducibility in bonding qualities.” *The Journal of Adhesion*: 1–22."
-  - id: "Flock et al. 2021a"
-    full: "Flock, Hannah, Stefan Diebels, Elisabeth Jägers, and Wulff Possart. 2021. “Thread-by-thread tear mendings in conservation of canvas paintings: A problem of reproducibility in bonding qualities.” *Journal of Adhesion 97*, no. 14: 1336–57. <https://doi.org/10.1080/00218464.2020.1761797>."
-  - id: "Flock et al. 2021b"
+    full: "Flock, Hannah, Stefan Diebels, Elisabeth Jägers, and Petra Demuth. 2019. “Störleim-Cellulosefaser-Gemische zur Einzelfadenverklebung.” *ZKK Zeitschrift für Kunsttechnologie und Konservierun*g, no. 1: 117–28."    
+  - id: "Flock 2020a"
+    full: "Flock, Hannah. 2020a. “Einzelfadenverklebung in der Gemälderestaurierung: Klebstoffe, Prüfsystematik und Ergebnisse.” PhD diss., UdS Saarbrücken. https://doi.org/10.22028/D291-34685"
+  - id: "Flock et al. 2020b"
+    full: "Flock, Hannah, Stefan Diebels, Elisabeth Jägers, and Wulff Possart. 2020. “Thread-by-thread tear mendings in conservation of canvas paintings: A problem of reproducibility in bonding qualities.” *The Journal of Adhesion*: 1–22. Also published in *Journal of Adhesion 97*, no. 14: 1336–57. <https://doi.org/10.1080/00218464.2020.1761797>."
+  - id: "Flock et al. 2021"
     full: "Flock, Hannah, Stefan Diebels, Elisabeth Jägers, and Petra Demuth. 2021. “New Investigations of Adhesives for Tear Repair of Canvas Paintings.” *Studies in Conservation 66*, no. 6: 321–41. <https://doi.org/10.1080/00393630.2020.1827185>."
   - id: "Flock et al. 2022"
     full: "Flock, Hannah, Petra Demuth, Stefan Diebels, and Elisabeth Jägers. 2022. “Will It Hold? About the Single Thread Bonding Technique.” In *Structural Treatments on Double-Sided Paintings: Case-Studies and Professional Experiences on Double-Sided Paintings (18 November 2020) and Expert Meeting (23, 24, 25 November 2020): Proceedings,* special issue 1, 168–99. Venaria, Italy: Centro la Conservazione e Restauro La Venaria Reale."
