Fixed citations and short form for Orlandi 1753
Short form had Orlandini; Orlandi is correct in paper 34

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -980,9 +980,9 @@ entries:
     full: "Oriola, Marta, Gema Campo, Matija Strlič, Linda Csefalvayova, Marianne Odlyha, and Alenka Možir. 2011. “Non-Destructive Condition Assessment of Painting Canvases Using Near Infrared Spectroscopy.” In *ICOM Committee for Conservation: 16th Triennial Conference, Lisbon, Portugal, 19–23 September 2011: Preprints,* edited by Janet Bridgland and Catherine Antomarchi, 408. Almada, Portugal: Artes Gráficas Critério; Paris: ICOM."
   - id: "Oriola-Folch et al. 2020"
     full: "Oriola-Folch, Marta, Gema Campo-Francés, Anna Nualart-Torroja, Cristina Ruiz-Recasens, and Iris Bautista-Morenilla. 2020. “Novel Nanomaterials to Stabilise the Canvas Support of Paintings Assessed from a Conservator’s Point of View.” *Heritage Science* 8, art. 23. <https://doi.org/10.1186/s40494-020-00367-2>."
-  - id: "Orlandini 1753"
+  - id: "Orlandi 1753"
     full: "Orlandi, P. A. 1753. *Abecedario pittorico.* Venezia: Guarienti."
-  - id: "Omrsby et al. 2008"
+  - id: "Ormsby et al. 2008"
     full: "Ormsby, B., E. Hagen, P. Smithen, and T. Learner. 2008. “Comparing Contemporary Titanium White-Based Acrylic Emulsion Grounds and Paints: Characterisation, Properties and Conservation.” In *Preparation for Painting: The Artists’ Choice and Its Consequences,* edited by Joyce Townsend, 163–71. London: Archetype."
   - id: "Ormsby et al. 2019"
     full: "Ormsby, B., J. Lee, I. Bonaduce, and A. Lluveras-Tenorio. 2019. “Evaluating Cleaning Systems for Use on Water Sensitive Modern Oil Paints: A Comparative Study.” In *Conservation of Modern Oil Paintings,* 11–35. Cham, Switzerland: Springer."
