Added date to citation for Gärdlund, Wågberg, and Gernandt 2003
was missing year in short form

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -504,7 +504,7 @@ entries:
     full: "García Castillo, Ana M. 2016. “Study of the Physical, Chemical and Mechanical Properties of Glue-Paste Lining Adhesives.” MA diss., Universitat Politècnica de València."
   - id: "Gardiner and Weber 2010"
     full: "Gardiner, Joy, and Joseph Weber. 2010. “Failure to Bind: A Re-examination of the Ageing of Hook and Loop Fasteners.” *Textile Specialty Group Postprints* 20, 116."
-  - id: "Gärdlund, Wågberg, and Gernandt"
+  - id: "Gärdlund, Wågberg, and Gernandt 2003"
     full: "Gärdlund, Linda, Lars Wågberg, and Renate Gernandt. 2003. “Polyelectrolyte Complexes for Surface Modification of Wood Fibres: II. Influence of Complexes on Wet and Dry Strength of Paper.” *Colloids and Surfaces A: Physicochemical and Engineering Aspects* 218, nos. 1–3: 137–49. <https://doi.org/10.1016/S0927-7757(02)00588-5>."
   - id: "Garrappa et al. 2020"
     full: "Garrappa, Silvia, Eva Kočí, Silvie Švarcová, Petr Bezdička, and David Hradil. 2020. “Initial Stages of Metal Soaps Formation in Model Paints: The Role of Humidity.” *Microchemical Journal* 156: 104842. <https://doi.org/10.1016/j.microc.2020.104842>."
