added year to short form citation Foster, Odlyha, and Hackney for
Year was missing in bib, s/b 1997

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -488,7 +488,7 @@ entries:
     full: "Forest, Élisabeth. 2019. “Le nouveau film BEVA® 371b et la formulation originale: comparaison de la force d’adhésion lors du doublage des peintures” [Linings with the New BEVA® 371b Film and the Original Formulation: Comparison of Bond Strength]. Poster presented at the 45th Annual Canadian Association for Conservation Conference, Halifax, Nova Scotia, May 28–June 1, 2019."
   - id: "Forni 1866"
     full: "Forni, Ulisse. 1866. *Manuale del pittore restauratore*. Florence: Successori le Monnier."
-  - id: "Foster, Odlyha, and Hackney"
+  - id: "Foster, Odlyha, and Hackney 1997"
     full: "Foster, G., M. Odlyha, and Stephen Hackney. 1997. “Evaluation of the Effects of Environmental Conditions and Preventive Conservation Treatment on Painting Canvases.” *Thermochimica Acta* 294, no. 1: 81–89. <https://doi.org/10.1016/S0040-6031(96)03147-4>."
   - id: "Froment 2019"
     full: "Froment, Emilie. 2019. *The Consequences of Wax-Resin Linings for the Present Appearance and Conservation of Seventeenth-Century Netherlandish Paintings on Canvas*. PhD diss. Amsterdam: University of Amsterdam."
