Added cite for Schaible 1983b
was missing from bib, part of paper 32

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -1164,6 +1164,8 @@ entries:
     full: "Schäfer, Phillip. 1983. *El credo de nuestra fe*. Santander, Spain: Sal Terrae."
   - id: "Schaible 1983a"
     full: "Schaible, Volker. 1983a. “Die Gemäldeübertragung.” *Maltechnik Restauro* 89, no. 2: 96–129."
+  - id: "Schaible 1983b"
+    full: "Schaible, Volker. 1983b. “Der Weg der Doubliertechniken: Versuch einer Zwischenbilanz.” *Maltechnik Restauro* 89, no. 4: 250–56. "
   - id: "Scharff 1980"
     full: "Scharff, Mikkel. 1980. “Klimaskadet maleri fra Badstuehuset.” Bachelor’s thesis. Royal Danish Academy of Fine Arts, School of Conservation, Copenhagen."
   - id: "Scharff 1995"
