Added year to short form for Olsson and Markevičius
year is 2017

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -968,7 +968,7 @@ entries:
     full: "Olin, Charles, and Tom Carter. ca. 1967–1974. “Supplies: NCFA/NPG Cons. Lab.” Unpublished internal document, National Collection of Fine Arts, Smithsonian American Art Museum, Washington, DC."
   - id: "Olsson and Markevičius 2010"
     full: "Olsson, N., and T. Markevičius. 2010. “Flexible Thermal Blanket and Low-Pressure Envelope System in the Structural Treatment of Paintings on Canvas.” In *Postprints of the Paintings Specialty Group, American Institute for Conservation Meeting, Milwaukee,* edited by B. Buckley, 63–71. Washington, DC: American Institute for Conservation. "
-  - id: "Olsson and Markevičius"
+  - id: "Olsson and Markevičius 2017"
     full: "Olsson, N., and T. Markevičius. 2017. “Studio Tip: Innovative Applications of Heating Mat and Low-Pressure Systems for Lining and Minimal Structural Treatment of Paintings.” In *Postprints of the Painting Specialty Group, American Institute for Conservation Meeting, Chicago,* edited by W. Partridge, 127–35. Washington, DC: American Institute for Conservation."
   - id: "Orata 2009"
     full: "Orata, Luigi, 2009. *Tagli e strappi nei dipinti su tela, metodologie di intervento* [Cuts and tears on canvas paintings: Treatment methods]. Firenze: Nardini."
