Added cite for Berger and Russell 1986
part of paper 37, was missing in bib

Also changed misspellings of Hagan

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -102,6 +102,8 @@ entries:
     full: "Berger, Gustav A. 1996. Transparent Lining of Paintings. In *ICOM Committee for Conservation: 11th Triennial Meeting, Edinburgh, Scotland, 1–6 September 1996: Preprints,* vol. 1, edited by Janet Bridgland, 239–44. London: James & James."
   - id: "Berger and Russell 1984"
     full: "Berger, Gustav A., and William H. Russell. 1984. “The New Stress Tests on Canvas Paintings and Some of Their Implications on the Preservation of Paintings.” In *ICOM Committee for Conservation: 7th Triennial Meeting, Copenhagen, 10–14 September 1984: Preprints*, 84/2/7–9. Paris: International Council of Museums."
+  - id: "Berger and Russell 1986"
+    full: "Berger, Gustav A., and William H. Russell. 1986. “Investigations into the Reactions of Plastic Materials to Environmental Changes, Part I: The Mechanics of Decay of Paint Films.” *Studies in Conservation* 31: 49–64."  
   - id: "Berger and Russell 1988"
     full: "Berger, Gustav A., and William H. Russell. 1988. “An Evaluation of the Preparation of Canvas Paintings Using Stress Measurements.” *Studies in Conservation* 33, no. 4: 187–204."
   - id: "Berger and Russell 1990"
@@ -339,13 +341,13 @@ entries:
   - id: "Daly and Michalski 1987"
     full: "Daly, D., and S. Michalski. 1987. “Methodology and Status of the Lining Project, CCI.” In *ICOM Committee for Conservation: Preprints: 8th Triennial Meeting, Sydney, Australia, 6–11 September 1987*, 145–52. Los Angeles: Getty Conservation Institute."
   - id: "Daly Hartin et al. 2010"
-    full: "Daly Hartin, D., E. Hagen, P. Marcon, S. Michalski, and T. Strang. 2010. “Research and Development into Structural Treatments of Paintings: CCI Lining Project & CCI Octoprobe.” In *ICOM Committee for Conservation Paintings Group Workshop: Current Practice and Recent Developments in the Structural Conservation of Paintings on Canvas Supports.* DVD. Helsinki: Metropolia University of Applied Sciences."
+    full: "Daly Hartin, D., E. Hagan, P. Marcon, S. Michalski, and T. Strang. 2010. “Research and Development into Structural Treatments of Paintings: CCI Lining Project & CCI Octoprobe.” In *ICOM Committee for Conservation Paintings Group Workshop: Current Practice and Recent Developments in the Structural Conservation of Paintings on Canvas Supports.* DVD. Helsinki: Metropolia University of Applied Sciences."
   - id: "Daly Hartin et al. 2011"
     full: "Daly Hartin, Debra, Eric Hagan, Stefan Michalski, and Mylène Choquette. 2011. “CCI Lining Project: Testing of Lined Model Paintings from Fractions of a Second to Decades.” In *ICOM-CC Lisbon 2011: Preprints, 16th Triennial Conference, Lisbon, 19–23 September 2011*, edited by Janet Bridgland and Catherine Antomarchi, paper 1309, 288–96. Almada, Portugal: Critério Produção Grafica; Paris: ICOM Committee for Conservation."
   - id: "Daly Hartin et al. 2015a"
     full: "Daly Hartin, Debra, Stefan Michalski, Eric Hagan, and Mylène Choquette. 2015. “Overview of the CCI Lining Project: Do Linings Prevent Cracking and Cupping in Paintings?” In *AIC Paintings Specialty Group Postprints* 28, edited by Barbara Buckley, 137–50. eBook. Washington, DC: American Institute for Conservation."
   - id: "Daly Hartin et al. 2015b"
-    full: "Daly Hartin, D., T. Strang, E. Hagen, and P. Marcon. 2015. “Studio Tip: Use of the CCI Octoprobe with the Willard Multipurpose Table.” In *AIC Paintings Specialty Group Postprints 28*, edited by Barbara Buckley, 169–73. eBook. Washington, DC: American Institute for Conservation."
+    full: "Daly Hartin, D., T. Strang, E. Hagan, and P. Marcon. 2015. “Studio Tip: Use of the CCI Octoprobe with the Willard Multipurpose Table.” In *AIC Paintings Specialty Group Postprints 28*, edited by Barbara Buckley, 169–73. eBook. Washington, DC: American Institute for Conservation."
   - id: "Daly Hartin, Michalski, and Pacquet 1993"
     full: "Daly Hartin, D., S. Michalski, and C. Pacquet. 1993. “Ongoing Research in the CCI Lining Project: Peel Testing of BEVA 371 and Wax-Resin Adhesives with Different Lining Supports.” In *ICOM Committee for Conservation: 10th Triennial Meeting, Washington, DC, 22–27 August 1993: Preprints,* edited by Janet Bridgland, 128–34. Paris: ICOM Committee for Conservation."
   - id: "Danchev 2006"
@@ -985,7 +987,7 @@ entries:
   - id: "Orlandi 1753"
     full: "Orlandi, P. A. 1753. *Abecedario pittorico.* Venezia: Guarienti."
   - id: "Ormsby et al. 2008"
-    full: "Ormsby, B., E. Hagen, P. Smithen, and T. Learner. 2008. “Comparing Contemporary Titanium White-Based Acrylic Emulsion Grounds and Paints: Characterisation, Properties and Conservation.” In *Preparation for Painting: The Artists’ Choice and Its Consequences,* edited by Joyce Townsend, 163–71. London: Archetype."
+    full: "Ormsby, B., E. Hagan, P. Smithen, and T. Learner. 2008. “Comparing Contemporary Titanium White-Based Acrylic Emulsion Grounds and Paints: Characterisation, Properties and Conservation.” In *Preparation for Painting: The Artists’ Choice and Its Consequences,* edited by Joyce Townsend, 163–71. London: Archetype."
   - id: "Ormsby et al. 2019"
     full: "Ormsby, B., J. Lee, I. Bonaduce, and A. Lluveras-Tenorio. 2019. “Evaluating Cleaning Systems for Use on Water Sensitive Modern Oil Paints: A Comparative Study.” In *Conservation of Modern Oil Paintings,* 11–35. Cham, Switzerland: Springer."
   - id: "Ormsby and Learner 2009"
