Added citation for Macarrón, Calvo, and Gil 2016
was in paper 51 but not in bib

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -812,6 +812,8 @@ entries:
     full: "Macarrón, Ana, Ana Calvo, and Rita Gil. 2014. “Cas d’étude des rentoilages historiques à la colle de pâte en Europe. Documentation et évaluation.” Paper presented at Colloque ARAAFU: Retours d’expérience et regards rétrospectifs: Association des Restaurateurs d’Art et d’Archéologie de Formation Universitaire, Paris, 26–28 November 2014."
   - id: "Macarrón, Calvo, and Gil 2015"
     full: "Macarrón, Ana, Ana Calvo, and Rita Gil. 2015. “European Recipes for Glue Lining Paste.” In *Sources on Art Technology: Back to Basics: Proceedings of the Sixth Symposium of the ICOM-CC Working Group Art Technological Source Research,* edited by Sigrid Eyb-Green, Joyce H. Townsend, Stefanos Kroustallis, Kathrin Pilz, and Idelette van Leeuwen, 139–40. London: Archetype."
+  - id: "Macarrón, Calvo, and Gil 2016"
+    full: "Macarrón, Ana, Ana Calvo, and Rita Gil. 2016. “Documentation of European Recipes for Glue Paste Linings.” In *Sources on Art Technology: Back to Basics*, 139–40. London: Archetype."    
   - id: "Macarrón, Calvo, and Gil 2017"
     full: "Macarrón, Ana, Ana Calvo, and Rita Gil. 2017. “Cas d’étude des rentoilages historiques à la colle de pâte en Europe: documentation et évaluation.” *Conservation Restauration de biens culturels. Retours d’expérience et regards rétrospectifs*, *6e colloque international de l’ARAAFU, Paris, Cité de l'architecture et du patrimoine, 26, 27 et 28 novembre 2014*, 35–42. Paris: ARAAFU."
   - id: "Macarrón, Calvo, and Gil 2018"
