--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -890,7 +890,7 @@ entries:
     full: "Mehra, Vishwa R. 2003. “A Low-Pressure Cold-Relining Table.” In *Lining Paintings: Papers from the Greenwich Conference on Comparative Lining Techniques*, edited by Caroline Villers, 121–24. London: Archetype."
   - id: "Melchiorre Di Crescenzo et al. 2019"
     full: "Melchiorre Di Crescenzo, Marta, John K. Delaney, Catherine Higgitt, Joanna Russell, and Marika Spring. 2019. “Artemisia Gentileschi’s Self-Portrait as Saint Catherine of Alexandria: Hyperspectral Imaging and Technical Investigation of a New National Gallery Acquisition.” Paper presented at Technart 2019, Brugges, 7–10 May 2019."    
-  - id: "Melià Angulo, Laura Fuster-López, and Escuder 2017"
+  - id: "Melià Angulo, Fuster-López, and Vicente Escuder 2017"
     full: "Melià Angulo, Ana, Laura Fuster-López, and Angel Vicente Escuder. 2017. “Study of the Mechanical Properties of Selected Animal Glues and Their Implication When Designing Conservation Strategies.” *CeROArt: conservation, exposition, restauration d’objets d’art,* HS 2017. <https://doi.org/10.4000/ceroart.5152>."
   - id: "Messens 2003"
     full: "Messens, Georges. 2003. “Hand Lining with Wax-Resin Using an Iron.” In *Lining Paintings: Papers from the Greenwich Conference on Comparative Lining Techniques*, edited by Caroline Villers, 70–76. London: Archetype."
