fixed citations-Tsuchiya and misc
took out TK placeholders for info we didn't get. Fixed Tsuchiya citation--added years but authors didn't supply some missing info

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -149,7 +149,7 @@ entries:
   - id: "Boitelle, Poggendorf, and Stevenson, forthcoming"
     full: "Boitelle, R., R. Poggendorf, and L. Stevenson. Forthcoming. “A Decisive Experience: A Technical Examination of Martinique Paintings by Paul Gauguin and Charles Laval.” In *Gauguin and Laval in Martinique*. Amsterdam: Van Gogh Museum."
   - id: "Bol 1991"
-    full: "Bol, L. J. 1991. *Aart Schouman: Ingenious Painter and Draughtsman*. Doornspijk: Davaco. de Witte, E., S. Florquin, and M. Goessens-Landrie. 1984. “Influence of the Modification of Dispersions on Film Properties.” In *Adhesives and Consolidants: Preprints of the Contributions to the Paris Congress, 2–8 September 1984*, edited by N. S. Brommelle, [TK pp. nos.]. London: International Institute for Conservation of Historic and Artistic Works."
+    full: "Bol, L. J. 1991. *Aart Schouman: Ingenious Painter and Draughtsman*. Doornspijk: Davaco. de Witte, E., S. Florquin, and M. Goessens-Landrie. 1984. “Influence of the Modification of Dispersions on Film Properties.” In *Adhesives and Consolidants: Preprints of the Contributions to the Paris Congress, 2–8 September 1984*, edited by N. S. Brommelle. London: International Institute for Conservation of Historic and Artistic Works."
   - id: "Bomford 1978"    
     full: "Bomford, David. 1978. “The Conservation Department of the National Gallery.” *National Gallery Technical Bulletin* 2: 3–10. http://www.nationalgallery.org.uk/technical-bulletin/bomford1978."   
   - id: "Bomford 2003"
@@ -365,7 +365,7 @@ entries:
   - id: "Delcour and Hoseney 2010"
     full: "Delcour, J. A., and R. C. Hoseney. 2010. *Principles of Cereal Science and Technology*. Saint Paul, MN: AACC International."
   - id: "de los Rios y Rojas and Socorro 1977"
-    full: "de los Rios y Rojas, Mantilla, and Maria Socorro. 1977. “Analisis del tejido de dos muestras procedentes de la tela y el forro del cuadro del Greco *Entierro del Conde de Orgaz,* conservado en la iglesia de Santo Tome de Toledo” [Analysis of the Texture of Two Samples from the Canvas and Lining Canvas of El Greco’s Painting *Burial of the Count of Orgaz*, Preserved in the Church of Santo Tome in Toledo]. In *El entierro del Conde de Orgaz: nueva instalación, tudio científico y tratamiento,* [TK pp nos.]. Madrid: Instituto de Conservación y Restauración de Obras de Arte."
+    full: "de los Rios y Rojas, Mantilla, and Maria Socorro. 1977. “Analisis del tejido de dos muestras procedentes de la tela y el forro del cuadro del Greco *Entierro del Conde de Orgaz,* conservado en la iglesia de Santo Tome de Toledo” [Analysis of the Texture of Two Samples from the Canvas and Lining Canvas of El Greco’s Painting *Burial of the Count of Orgaz*, Preserved in the Church of Santo Tome in Toledo]. In *El entierro del Conde de Orgaz: nueva instalación, tudio científico y tratamiento*. Madrid: Instituto de Conservación y Restauración de Obras de Arte."
   - id: "Delsaut and Durand 1989"
     full: "Delsaut, J., and R. Durand. 1989. “Mesure de la force de rétraction des papiers.” *Conservation Restauration des Biens Culturels* 1: 64–66."
   - id: "De Marchi 2016"
@@ -935,7 +935,7 @@ entries:
   - id: "Murillo-Fuentes and Alba 2018"
     full: "Murillo-Fuentes, J. J., and L. Alba. 2018. “Thread Counting in X-Rays of Plain-Weave Painting Canvas.” In *Advanced Characterization Techniques: Diagnostic Tools and Evaluation Methods in Heritage Science,* edited by David M. Bastidas and Emilio Cano, chapter 7. Cham, Germany: Springer."
   - id: "Nadeau et al. 2020"
-    full: "Nadeau, Marie-Helene, Teresa Schreibweis Torrents, Lucie Kourilova, Josefina López, Lynne Harrison, Joanna Strombek, Luigi Orata, Rita Costabile, Lisette Vos, Suvi Kervinen, Danica Stojkovicova, Cynthia Schwarz, and Kate Seymour. 2020. “Review Mist-Lining Workshop: A Two-Phase Programme with Support from The Getty Foundation’s Conserving Canvas Initiative, 25th–29th March and Summer 2019.” *The Picture Restorer* 57, [TK pp. nos.]."
+    full: "Nadeau, Marie-Helene, Teresa Schreibweis Torrents, Lucie Kourilova, Josefina López, Lynne Harrison, Joanna Strombek, Luigi Orata, Rita Costabile, Lisette Vos, Suvi Kervinen, Danica Stojkovicova, Cynthia Schwarz, and Kate Seymour. 2020. “Review Mist-Lining Workshop: A Two-Phase Programme with Support from The Getty Foundation’s Conserving Canvas Initiative, 25th–29th March and Summer 2019.” *The Picture Restorer* 57 (Autumn 2020): 58–64."
   - id: "Nahum, McGuirk, and Watson 2019"
     full: "Nahum, Andrew, Justin McGuirk, and Eleanor Watson, eds. 2019. *Moving to Mars: Design for the Red Planet.* Exhibition catalogue. London: The Design Museum."
   - id: "Nappi 1984"
@@ -1051,7 +1051,7 @@ entries:
   - id: "Phenix and Hedley 1984"
     full: "Phenix, Alan, and Gerry Hedley. 1984. “Lining Without Heat or Moisture.” In *Preprints of ICOM 7th Triennial Meeting, Copenhagen, 10–14 September 1984*, edited by Diana de Froment, 84.2.38–44. Paris: International Council of Museums, in association with the J. Paul Getty Trust."
   - id: "Phenix and Hedley 1993"
-    full: "Phenix, Alan, and Gerry Hedley. 1993. “Lining without Heat or Moisture.” In *Measured Opinions: Collected Papers on the Conservation of Paintings*, edited by Caroline Villers, [TK pp. nos]. London: United Kingdom Institute for Conservation."
+    full: "Phenix, Alan, and Gerry Hedley. 1993. “Lining without Heat or Moisture.” In *Measured Opinions: Collected Papers on the Conservation of Paintings*, edited by Caroline Villers. London: United Kingdom Institute for Conservation."
   - id: "Piotrowska and Amann 2009"
     full: "Piotrowska, Kinga, and Sandra Amann. 2009. *“Minimal*-*Adhesive Mend and* *Cast In-painting: A* *Treatment of a Tear on an* *Ed Ruscha Painting*.” The AIC Paintings Specialty Group Postprints, vol. 22, edited by Barbara Buckley, Meg Newburger, and American Institute for Conservation of Historic and Artistic Works, AIC Paintings Specialty Group, 48–57. Washington, DC: AIC."
   - id: "Plahter 1999"
@@ -1139,7 +1139,7 @@ entries:
   - id: "Romanova 2019"
     full: "Romanova, Anastasia. 2019. “Using Different Adhesives for Strip-Lining.” In *Materials of All-Russian Scientific and Practical Conference “RESCON-2019*,” edited by S. G Burshneva, 170–73. Kazan: Kazan University Press. http://www.gosniir.ru/file.ashx?objid=10fd34b6-8329-4b61-b39b-bf25c46f63e0."
   - id: "Rossi-Doria 2010"
-    full: "Rossi-Doria, Matteo. 2010. “Diversity of Methodologies and Decision-Making Processes in the Structural Conservation of Oversize Paintings.” In *Actas Del Congreso Internacional de Restauración de pinturas sobre lienzo de gran formato* [International Congress on outsize paintings conservation], *Valencia, Spain, 2010,* edited by Susana Martín Rey, Vicente Guerola Blay, and María Castell Agust, [TK pp. nos.]. València: Universitat Politècnica de València."
+    full: "Rossi-Doria, Matteo. 2010. “Diversity of Methodologies and Decision-Making Processes in the Structural Conservation of Oversize Paintings.” In *Actas Del Congreso Internacional de Restauración de pinturas sobre lienzo de gran formato* [International Congress on outsize paintings conservation], *Valencia, Spain, 2010,* edited by Susana Martín Rey, Vicente Guerola Blay, and María Castell Agust. València: Universitat Politècnica de València."
   - id: "Rossi-Doria 2013"
     full: "Rossi-Doria, Matteo. 2013. “Requiem o recupero critico dei metodi di foderatura tradizionali [Requiem for, or critical recovery of, traditional lining methods].” In *XI Congresso nazionale IGIIC Lo stato dell’arte 11: Accademia delle belle arti: Bologna, 10–12 ottobre 2013*, 77–87. Florence: Nardini. https://cbccoop.it/app/uploads/2017/05/testo-IGIIC-2013-1.pdf."
   - id: "Rouba 2000"
@@ -1303,7 +1303,7 @@ entries:
   - id: "Torah et al. 2018"
     full: "Torah, Russel, Jake Lawrie-Ashton, Yi Li, Sasikumar Arumugam, Henry A. Sodano, and Steve Beeby. 2018. “Energy-Harvesting Materials for Smart Fabrics and Textiles.” *MRS Bulletin* 43, no. 3: 214–19."
   - id: "Toriumi 2018"
-    full: "Toriumi, Hidemi. 2018. “Development of Cleaning Method for Paintings in Europe and the United States Since the 1980s.” In *The Japan Society for the Conservation of Cultural Property 40th Conference Preprints, Kyoto (Japan), 16–17 June 2018*, 280–81. [TK publication info]"
+    full: "Toriumi, Hidemi. 2018. “Development of Cleaning Method for Paintings in Europe and the United States Since the 1980s.” In *The Japan Society for the Conservation of Cultural Property 40th Conference Preprints, Kyoto (Japan), 16–17 June 2018*, 280–81."
   - id: "Townsend et al. 2008"
     full: "Townsend, J., T. Doherty, G. Heydenreich, and J. Ridge, eds. 2008. *Preparation for Painting: The Artist’s Choice and Its Consequences*. London: Archetype."
   - id: "Tranquilli 1996"
@@ -1314,12 +1314,12 @@ entries:
     full: "Trostyanskaya, Elena, Galina Tomashevich, and Evdokiya Sorokina. 1960. “Adhesives for Lining.” In *Issues in Restoration and Conservation of Works of Visual Art*, 173–82. Moscow: Publishing of Academy of Arts."
   - id: "Tsuchiya 2018"
     full: "Tsuchiya, Yuko. 2018. “Stabilization Treatment for Acrylic Paintings on Cotton Cloth.” *Stabilization Processing: Multi-organizational Co-operative Project for Preserving and Restoring Cultural Assets Damaged by Tsunami on March 11th, 2011*, 33–42. Enlarged edition. Tokyo: ICOM Japan."
-  - id: "Tsuchiya et al. TK YEAR 1"
-    full: "Tsuchiya, Yuko, Hiroshi Haze, Eriko Nakau, Kumi Masuda, Marie Moto, Hiroshi Wada, Tominori Araki, Nobuyuki Kamba. DATE. “Conservation Treatment for Recovery Efforts After the Disaster with Cultural Assets: Experiments of Desalination for Paintings on Linen Canvas.” In *The Japan Society for the Conservation of Cultural Property 37th Conference Preprints, Kyoto (Japan), 27–28 June 2015*, 86–87. [TK PUB INFO]"
-  - id: "Tsuchiya et al. TK YEAR 2"
-    full: "Tsuchiya, Yuko, Eriko Hoshi, Marie Moto, Hiroshi Haze, and Nobuyuki Kamba. DATE TK. “Stabilization of Canvas Paintings Damaged by Tsunami: Desalination of Blotter Washing to Acrylic Paintings on Cotton Canvas.” In *The Japan Society for the Conservation of Cultural Property 39th Conference Preprints, Kanazawa (Japan) ,1–2 July 2017*, 28–29. [TK PUB INFO]"
-  - id: "Tsuchiya et al. TK YEAR 3"
-    full: "Tsuchiya, Yuko, Nobuyuki Kamba, Hiroshi Wada, Tominori Araki, Haruhiko Suzuki, Otoyo Yonekura, Tomoe Hirakawa, Ayako Ogawa, Hiroshi Haze, Norie Nishihara, Kumi Ikegam. DATE. “Conservation Treatment for Recovery Efforts After the Disaster with Cultural Assets: Experiments of Desalination for Canvas Paintings.” In *The Japan Society for the Conservation of Cultural Property 36th Conference Preprints, Tokyo (Japan), 7–8 June 2014*, 182–83."
+  - id: "Tsuchiya et al. 2014"
+    full: "Tsuchiya, Yuko, Nobuyuki Kamba, Hiroshi Wada, Tominori Araki, Haruhiko Suzuki, Otoyo Yonekura, Tomoe Hirakawa, Ayako Ogawa, Hiroshi Haze, Norie Nishihara, Kumi Ikegam. 2014. “Conservation Treatment for Recovery Efforts After the Disaster with Cultural Assets: Experiments of Desalination for Canvas Paintings.” In *The Japan Society for the Conservation of Cultural Property 36th Conference Preprints, Tokyo (Japan), 7–8 June 2014*, 182–83."
+  - id: "Tsuchiya et al. 2015"
+    full: "Tsuchiya, Yuko, Hiroshi Haze, Eriko Nakau, Kumi Masuda, Marie Moto, Hiroshi Wada, Tominori Araki, Nobuyuki Kamba. 2015. “Conservation Treatment for Recovery Efforts After the Disaster with Cultural Assets: Experiments of Desalination for Paintings on Linen Canvas.” In *The Japan Society for the Conservation of Cultural Property 37th Conference Preprints, Kyoto (Japan), 27–28 June 2015*, 86–87."
+  - id: "Tsuchiya et al. 2017"
+    full: "Tsuchiya, Yuko, Eriko Hoshi, Marie Moto, Hiroshi Haze, and Nobuyuki Kamba. 2017. “Stabilization of Canvas Paintings Damaged by Tsunami: Desalination of Blotter Washing to Acrylic Paintings on Cotton Canvas.” In *The Japan Society for the Conservation of Cultural Property 39th Conference Preprints, Kanazawa (Japan) ,1–2 July 2017*, 28–29."    
   - id: "Tudor-Hart 1931"
     full: "Tudor-Hart, P. 1931. “Nettoyage, rentoilage et vernissage des peintures.” *Mouseion* 15, no. 3: 23–40."
   - id: "Tumosa and Mecklenburg 2004"
